# rust-interop-with-cpp

./: Cargo.toml  Makefile  README.md
src/: Makefile  lib.rs  main.cpp  rust.h
