[package]
name = "rust-interop-with-cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rust_interop_with_cpp"
crate-type = ["staticlib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
pedantic = "warn"
